Just a few more fixes for readability

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ body {
 #aboutSection {
   margin-top: 66px;
   font-weight: bold;
-  font-size: 15px;
+  font-size: 20px;
   font-family: 'Garamond', serif;
   color: rgb(255, 255, 255);
   text-align: center;
@@ -53,7 +53,7 @@ body {
 #sampleSection {
   margin-top: 66px;
   font-weight: bold;
-  font-size: 15px;
+  font-size: 20px;
   font-family: 'Garamond', serif;
   color: rgb(255, 255, 255);
   text-align: center;
